Fix Overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,5 +120,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+  html {
+    overflow-x: hidden;
   }
 }
